@@ -1,7 +1,8 @@
 package com.thunga.web.seed;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.Resource;
+import org.springframework.core.io.support.PathMatchingResourcePatternResolver;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -12,9 +13,7 @@ import com.thunga.web.repository.AuthorRepository;
 import com.thunga.web.repository.BookRepository;
 import com.thunga.web.repository.CategoryRepository;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
 
 @Component
 @RequiredArgsConstructor
@@ -26,52 +25,68 @@ public class DatabaseSeeder {
 
     @Transactional
     public void seed() throws Exception {
-        seedBooksFromImages();
+        if (bookRepository.count() == 0) {
+            seedBooksFromImages();
+        }
     }
 
     private void seedBooksFromImages() throws IOException {
 
-        ClassPathResource resource = new ClassPathResource("static/images/books/");
-        File folder = resource.getFile();
-        File[] files = folder.listFiles();
+        // Load tất cả file ảnh trong resources/static/images/books/*
+        PathMatchingResourcePatternResolver resolver = new PathMatchingResourcePatternResolver();
+        Resource[] resources = resolver.getResources("classpath:/static/images/books/*");
 
-        if (files == null || files.length == 0) {
-            System.out.println("⚠ Không tìm thấy file ảnh nào trong static/images/books/");
+        if (resources.length == 0) {
+            System.out.println("⚠ Không tìm thấy ảnh trong /static/images/books/");
             return;
         }
 
-        for (File file : files) {
-            if (!file.isFile()) continue;
+        // Tạo Author mặc định
+        Author defaultAuthor = authorRepository.findByName("Chưa rõ");
+        if (defaultAuthor == null) {
+            defaultAuthor = authorRepository.save(new Author(null, "Chưa rõ"));
+        }
 
-            String fileName = file.getName();
+        // Tạo Category mặc định
+        Category defaultCategory = categoryRepository.findByName("Khác");
+        if (defaultCategory == null) {
+            defaultCategory = categoryRepository.save(new Category(null, "Khác"));
+        }
+
+        for (Resource res : resources) {
+
+            String fileName = res.getFilename();
+            if (fileName == null) continue;
+
+            // Tách title từ tên file
             String title = fileName.substring(0, fileName.lastIndexOf("."))
                     .replace("-", " ")
                     .replace("_", " ");
 
+            // Nếu đã có rồi thì bỏ qua
             if (!bookRepository.findByTitle(title).isEmpty()) {
                 continue;
             }
 
-            byte[] image = Files.readAllBytes(file.toPath());
-
-            Author author = authorRepository.findFirstByOrderByIdAsc()
-                    .orElseGet(() -> authorRepository.save(new Author(null, "Chưa rõ")));
-
-            Category category = categoryRepository.findFirstByOrderByIdAsc()
-                    .orElseGet(() -> categoryRepository.save(new Category(null, "Khác")));
+            byte[] imageBytes = res.getInputStream().readAllBytes();
 
             Book book = new Book();
             book.setTitle(title);
-            book.setAuthor(author);
-            book.setCategory(category);
-            book.setImage(image);
-            book.setPrice(100000);
+            book.setAuthor(defaultAuthor);
+            book.setCategory(defaultCategory);
+            book.setImage(imageBytes);
+
+            // --- Giá trị mặc định để tránh lỗi UI ---
+            book.setPrice(99000);
             book.setNumber_in_stock(10);
+            book.setNumber_sold(0);
+            book.setNumber_page(120);
+            book.setDate_publication("2024");
+            book.setDescription("Sách chưa có mô tả chi tiết.");
 
             bookRepository.save(book);
 
-            System.out.println("✔ Seeded: " + title);
+            System.out.println("✔ Seeded book: " + title);
         }
     }
 }
-
